added income tax images + changed text

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">The XXX program, JS</span>
+          <span class="mdl-layout-title">Salary, in JavaScript</span>
         </div>
       </header>
       <main class="mdl-layout__content">
         <div class="right-image">
-          <img src="./images/javaScript.webp" alt="laptop image" />
+          <img src="./images/income_tax.jpg" alt="An image representing income tax" />
         </div>
-        <div class="page-content">Instructions here ...</div>
+        <div class="page-content">Please enter your employment information.</div>
         <br />
         <!-- Simple Textfield for integers-->
         <form action="#">
@@ -37,7 +37,18 @@
             <!-- input pattern attribute -->
             <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="length" />
             <!-- mdl-textfield__label -->
-            <label class="mdl-textfield__label" for="demo-input">Length of ... (mm)</label>
+            <label class="mdl-textfield__label" for="demo-input">Hours worked (hours)</label>
+            <!-- class "mdl-textfield__error" -->
+            <span class="mdl-textfield__error">Input is not a number</span>
+          </div>
+          <br />
+        <!-- Simple Textfield for integers 2-->
+        <form action="#">
+          <div class="mdl-textfield mdl-js-textfield">
+            <!-- input pattern attribute -->
+            <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="length" />
+            <!-- mdl-textfield__label -->
+            <label class="mdl-textfield__label" for="demo-input">Hourly wage ($)</label>
             <!-- class "mdl-textfield__error" -->
             <span class="mdl-textfield__error">Input is not a number</span>
           </div>
