pay will be text edit

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </form>
         <br />
         <div class="page-content-answer">
-          <div id="answer">The answer is: ...</div>
+          <div id="answer">Your pay will be:</div>
         </div>
       </main>
     </div>
