made minor changes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="description" content="Salary, in JavaScript" />
+  <meta name="description" content="Salary, in JS" />
   <meta name="keywords" content="mths, icd2o" />
   <meta name="author" content="Peter Zerbinos" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,7 +15,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png" />
   <link rel="manifest" href="./site.webmanifest" />
-  <title>Salary, in JavaScript</title>
+  <title>Salary, in JS</title>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <header class="mdl-layout__header">
       <div class="mdl-layout__header-row">
-        <span class="mdl-layout-title">Salary, in JavaScript</span>
+        <span class="mdl-layout-title">Salary, in JS</span>
       </div>
     </header>
     <main class="mdl-layout__content">
